--- a/DiceGame/MultiDiceGame/MultiDiceGame.csproj
+++ b/DiceGame/MultiDiceGame/MultiDiceGame.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DiceLib\DiceLib.csproj" />
       <ProjectReference Include="..\MultiDiceLib\MultiDiceLib.csproj" />
     </ItemGroup>
 
